argocd/ingressroute.yaml
# Traefik IngressRoute for ArgoCD Web UI and gRPC
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.opi.tamer.io`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
    - kind: Rule
      match: Host(`argocd.opi.tamer.io`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
  tls:
    secretName: local-selfsigned-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server-http
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`argocd.opi.tamer.io`)
      middlewares:
        - name: argocd-redirect-https
      services:
        - name: argocd-server
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: argocd-redirect-https
  namespace: argocd
spec:
  redirectScheme:
    scheme: https
    permanent: true
